--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       container_name: backend
       ports:
          - 8001:8001
+      volumes:
+         - ./backend:/app
 
    frontend:
       build: frontend
@@ -13,4 +15,11 @@ services:
          - 8000:8000
       depends_on:
          - backend
+      volumes:
+         - ./frontend:/app
 
+   memcached:
+      image: memcached
+      container_name: memcached
+      ports:
+         - 11211:11211
